--- a/src/components/common/DataTable.css
+++ b/src/components/common/DataTable.css
@@ -11,7 +11,6 @@
     box-sizing: border-box;
     max-width: 100%;
     width: 100%;
-    height: 100%; /* Take full height of parent container */
     min-height: 700px; /* Height to fit 10 rows without scrolling */
   }
   
@@ -304,7 +303,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
     min-height: 48px;
     padding: 4px 0;
   }
@@ -1028,7 +1026,6 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 100%;
   }
   
   /* Pagination Styles */
